--- a/scss/blocks/_recipe.scss
+++ b/scss/blocks/_recipe.scss
@@ -361,7 +361,7 @@
       border: 1px solid #e2e2e2;
       background: transparent;
 
-      svg path {
+      svg {
         fill: rgba($dark, 0.5);
       }
     }
@@ -379,15 +379,14 @@
       transition: all 0.2s linear;
 
       svg {
+        width: 7px;
+        height: 11px;
         position: absolute;
         top: 50%;
         left: 50%;
         transform: translate(-50%, -50%);
-
-        path {
-          fill: $white;
-          transition: all 0.2s linear;
-        }
+        fill: $white;
+        transition: all 0.2s linear;
       }
 
       @media (hover: hover) {
@@ -395,7 +394,7 @@
           border-color: #f02c38;
           background: #f02c38;
 
-          svg path {
+          svg {
             fill: $white !important;
           }
         }
@@ -406,7 +405,7 @@
           border-color: #f02c38;
           background: #f02c38;
 
-          svg path {
+          svg {
             fill: $white !important;
           }
         }
@@ -531,10 +530,9 @@
         min-height: 31px;
         border-radius: 0;
         border: none;
-
         background: transparent;
 
-        svg path {
+        svg {
           fill: #f02c38;
         }
 
@@ -542,7 +540,7 @@
           &:hover {
             background: transparent;
 
-            svg path {
+            svg {
               fill: #f02c38 !important;
             }
           }
@@ -552,7 +550,7 @@
           &:active {
             background: transparent;
 
-            svg path {
+            svg {
               fill: #f02c38 !important;
             }
           }
