--- a/scss/blocks/_about.scss
+++ b/scss/blocks/_about.scss
@@ -1,9 +1,37 @@
 .about {
   padding: 130px 0 564px;
-  background-image: url("../../images//about/about-bg.webp");
-  background-position: center center; // x y
-  background-size: cover;
-  background-repeat: no-repeat;
+  position: relative;
+  border-bottom-left-radius: 40px;
+  border-bottom-right-radius: 40px;
+  overflow: hidden;
+
+  &__top {
+    width: 100%;
+    height: 651px;
+    position: absolute;
+    top: 0;
+    left: 0;
+    background: linear-gradient(180deg, #fff 0%, rgba(255, 255, 255, 0) 100%);
+    z-index: 1;
+  }
+
+  &__bot {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    background-image: url("../images/about/about-bg.webp");
+    background-position: center bottom; // x y
+    background-size: cover;
+    background-repeat: no-repeat;
+  }
+
+  &__inner {
+    z-index: 2;
+    position: relative;
+  }
 
   &__title {
     text-align: center;
@@ -34,6 +62,15 @@
     }
   }
 }
+
+@media (max-width: 1920px) {
+  .about {
+    &__bot {
+      background-size: contain;
+    }
+  }
+}
+
 @media (max-width: 1440px) {
   .about {
     padding: 130px 0 392px;
