--- a/scss/blocks/_footer.scss
+++ b/scss/blocks/_footer.scss
@@ -10,6 +10,9 @@
     padding: 0 50px;
     display: flex;
   }
+  &__logo {
+    transform: rotate(1.932deg);
+  }
   &__right {
     margin-left: auto;
     display: flex;
@@ -39,8 +42,76 @@
       margin-top: 27px;
       display: flex;
     }
-    &-item:not(:first-child) {
-      margin-left: 15px;
+    &-item {
+      width: 40px;
+      height: 40px;
+      border-radius: 50%;
+      border: 1px solid $white;
+      position: relative;
+      transition: all 0.2s linear;
+
+      @media (hover: hover) {
+        &:hover {
+          background: $white;
+
+          svg {
+            fill: $primary !important;
+          }
+        }
+      }
+
+      @media (hover: none) {
+        &:active {
+          background: $white;
+
+          svg {
+            fill: $primary !important;
+          }
+        }
+      }
+
+      &:not(:first-child) {
+        margin-left: 15px;
+      }
+
+      &:nth-child(1) {
+        svg {
+          width: 21px;
+          height: 13px;
+          fill: $white;
+          transition: all 0.2s linear;
+          position: absolute;
+          top: 50%;
+          left: 50%;
+          transform: translate(-50%, -50%);
+        }
+      }
+
+      &:nth-child(2) {
+        svg {
+          width: 21px;
+          height: 15px;
+          fill: $white;
+          transition: all 0.2s linear;
+          position: absolute;
+          top: 50%;
+          left: 50%;
+          transform: translate(-50%, -50%);
+        }
+      }
+
+      &:nth-child(3) {
+        svg {
+          width: 12px;
+          height: 20px;
+          fill: $white;
+          transition: all 0.2s linear;
+          position: absolute;
+          top: 50%;
+          left: 50%;
+          transform: translate(-50%, -50%);
+        }
+      }
     }
   }
   &__ticker {
@@ -97,6 +168,19 @@
       line-height: 180%;
       text-decoration: underline !important;
       opacity: 0.7;
+      transition: all 0.2s linear;
+
+      @media (hover: hover) {
+        &:hover {
+          opacity: 1;
+        }
+      }
+
+      @media (hover: none) {
+        &:active {
+          opacity: 1;
+        }
+      }
     }
     &-item + &-item {
       margin-left: 35px;
