--- a/css/main.css
+++ b/css/main.css
@@ -11855,12 +11855,12 @@ body {
   transform: translate(-50%, -50%);
 }
 .preloader__logo {
-  transition: all 0.2s linear;
+  transition: transform 0.2s linear;
   transform: rotate(1.932deg);
 }
 .preloader__logo--active {
   transform: translateY(30px) rotate(1.932deg);
-  opacity: 0;
+  display: none;
 }
 .preloader__progress {
   width: 113px;
