--- a/css/main.css
+++ b/css/main.css
@@ -1902,7 +1902,7 @@ body {
   border-radius: 0;
 }
 .player__progress {
-  display: block;
+  display: none;
   position: absolute;
   width: calc(100% - 100px);
   height: 2px;
@@ -1911,6 +1911,7 @@ body {
   bottom: 10%;
 }
 .player__progress--fixed {
+  display: block;
   z-index: 10;
   position: fixed;
 }
@@ -1938,6 +1939,7 @@ body {
   }
 }
 .player__exit {
+  display: none;
   width: 150px;
   height: 150px;
   background-image: url("../images/video/exit.svg");
@@ -1949,6 +1951,7 @@ body {
   top: 40px;
 }
 .player__exit--fixed {
+  display: block;
   z-index: 10;
   position: fixed;
 }
@@ -11832,7 +11835,7 @@ body {
 .preloader {
   width: 100%;
   height: 100vh;
-  position: absolute;
+  position: fixed;
   top: 0;
   left: 0;
   z-index: 5;
