--- a/scss/blocks/_player.scss
+++ b/scss/blocks/_player.scss
@@ -29,7 +29,7 @@
     }
   }
   &__progress {
-    display: block;
+    display: none;
     position: absolute;
     width: calc(100% - 100px);
     height: 2px;
@@ -37,6 +37,7 @@
     transform: translateX(-50%);
     bottom: 10%;
     &--fixed {
+      display: block;
       z-index: 10;
       position: fixed;
     }
@@ -65,6 +66,7 @@
     }
   }
   &__exit {
+    display: none;
     width: 150px;
     height: 150px;
     background-image: url("../images/video/exit.svg");
@@ -75,6 +77,7 @@
     right: 30px;
     top: 40px;
     &--fixed {
+      display: block;
       z-index: 10;
       position: fixed;
     }
