--- a/css/main.css
+++ b/css/main.css
@@ -134,7 +134,7 @@ legend {
 }
 @font-face {
   font-family: "Cocogoose Narrow";
-  src: url("../fonts/cocogoose.narrow-letterpress.woff"), url("../fonts/cocogoose.narrow-letterpress.woff");
+  src: url("../fonts/Cocogoose-Narrow-Letterpress.woff"), url("../fonts/Cocogoose-Narrow-Letterpress.woff2");
   font-style: normal;
   font-weight: 400;
   font-display: swap;
