--- a/scss/blocks/_preloader.scss
+++ b/scss/blocks/_preloader.scss
@@ -1,56 +1,56 @@
-.preloader {
-  width: 100%;
-  height: 100vh;
-  position: fixed;
-  top: 0;
-  left: 0;
-  z-index: 5;
-  background-color: $white;
-  transition: all 0.2s linear;
+// .preloader {
+//   width: 100%;
+//   height: 100vh;
+//   position: fixed;
+//   top: 0;
+//   left: 0;
+//   z-index: 5;
+//   background-color: $white;
+//   transition: all 0.2s linear;
 
-  &--active {
-    opacity: 0;
-    visibility: visible;
-    pointer-events: none;
-  }
+//   &--active {
+//     opacity: 0;
+//     visibility: visible;
+//     pointer-events: none;
+//   }
 
-  &__loader {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    row-gap: 30px;
-    transform: translate(-50%, -50%);
-  }
+//   &__loader {
+//     position: absolute;
+//     top: 50%;
+//     left: 50%;
+//     display: flex;
+//     flex-direction: column;
+//     align-items: center;
+//     row-gap: 30px;
+//     transform: translate(-50%, -50%);
+//   }
 
-  &__logo {
-    transition: transform 0.2s linear;
-    transform: rotate(1.932deg);
+//   &__logo {
+//     transition: transform 0.2s linear;
+//     transform: rotate(1.932deg);
 
-    &--active {
-      transform: translateY(30px) rotate(1.932deg);
-      display: none;
-    }
-  }
+//     &--active {
+//       transform: translateY(30px) rotate(1.932deg);
+//       display: none;
+//     }
+//   }
 
-  &__progress {
-    width: 113px;
-    max-width: 113px;
-    height: 2px;
-    background-color: #d9d9d9;
-    position: relative;
-    overflow: hidden;
+//   &__progress {
+//     width: 113px;
+//     max-width: 113px;
+//     height: 2px;
+//     background-color: #d9d9d9;
+//     position: relative;
+//     overflow: hidden;
 
-    &-inner {
-      width: 0;
-      height: 2px;
-      position: absolute;
-      top: 0;
-      left: 0;
-      transition: all 0.2s linear;
-      background-color: $primary;
-    }
-  }
-}
+//     &-inner {
+//       width: 0;
+//       height: 2px;
+//       position: absolute;
+//       top: 0;
+//       left: 0;
+//       transition: all 0.2s linear;
+//       background-color: $primary;
+//     }
+//   }
+// }
