--- a/scss/blocks/_recipe.scss
+++ b/scss/blocks/_recipe.scss
@@ -2,7 +2,7 @@
   width: 100%;
   padding: 65px 0 130px;
   background-color: #f7f7f7;
-
+  border-radius: 0 0 40px 40px;
   &-container {
     max-width: 1920px;
     padding: 0 50px;
@@ -73,7 +73,9 @@
     padding-bottom: 100px;
     margin: 0 100px;
     overflow: hidden;
-
+    &-wrapper {
+      transition: all 600ms linear !important;
+    }
     .r-item {
       display: flex;
       column-gap: 58px;
@@ -184,11 +186,7 @@
             position: absolute;
             bottom: 0;
             left: 0;
-            background: linear-gradient(
-              0deg,
-              #f7f7f7 0%,
-              rgba(247, 247, 247, 0) 100%
-            );
+            background: linear-gradient(0deg, #f7f7f7 0%, rgba(247, 247, 247, 0) 100%);
             z-index: 3;
             opacity: 1;
             visibility: visible;
@@ -283,11 +281,7 @@
             position: absolute;
             bottom: 0;
             left: 0;
-            background: linear-gradient(
-              0deg,
-              #f7f7f7 0%,
-              rgba(247, 247, 247, 0) 100%
-            );
+            background: linear-gradient(0deg, #f7f7f7 0%, rgba(247, 247, 247, 0) 100%);
             z-index: 3;
             opacity: 1;
             visibility: visible;
@@ -570,6 +564,7 @@
 
 @media (max-width: 1200px) {
   .recipe {
+
     &__slider {
       .r-item {
         &__img {
@@ -652,6 +647,7 @@
 
 @media (max-width: 992px) {
   .recipe {
+    border-radius: 0 0 30px 30px;
     .tabs {
       max-width: 620px;
       margin: 50px auto;
@@ -674,6 +670,7 @@
 
 @media (max-width: 768px) {
   .recipe {
+    padding: 35px 0 65px;
     &-container {
       padding: 0 0 0 15px;
     }
