--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,67 +1,67 @@
-@import "./reset";
-@import "./vars";
-@import "./fonts";
+@import './reset';
+@import './vars';
+@import './fonts';
 
 html,
 body {
-  width: 100%;
-  height: 100%;
-  margin: 0;
-  padding: 0;
-  font-family: "Inter", sans-serif;
-  font-weight: 400;
-  color: $dark;
-  scroll-behavior: smooth;
-  background: inherit;
+	width: 100%;
+	height: 100%;
+	margin: 0;
+	padding: 0;
+	font-family: 'Inter', sans-serif;
+	font-weight: 400;
+	color: $dark;
+	scroll-behavior: smooth;
+	background: $white;
 }
 
 .body-wrapper {
-  position: absolute;
-  left: 0;
-  top: 0;
-  width: 100%;
-  height: 100%;
+	position: absolute;
+	left: 0;
+	top: 0;
+	width: 100%;
+	height: 100%;
 }
 .no-scroll {
-  overflow: hidden;
+	overflow: hidden;
 }
 
 .show {
-  display: block;
+	display: block;
 }
 
 .hide {
-  display: none !important;
+	display: none !important;
 }
 
 .fade {
-  animation-name: fade;
-  animation-duration: 0.5s;
+	animation-name: fade;
+	animation-duration: 0.5s;
 }
 
 @keyframes fade {
-  from {
-    opacity: 0.1;
-  }
-  to {
-    opacity: 1;
-  }
+	from {
+		opacity: 0.1;
+	}
+	to {
+		opacity: 1;
+	}
 }
 
 .container {
-  margin: 0 auto;
+	margin: 0 auto;
 }
 
-@import "./blocks/header";
-@import "./blocks/intro";
-@import "./blocks/info";
-@import "./blocks/about";
-@import "./blocks/assortment";
-@import "./blocks/recipe";
-@import "./blocks/buy";
-@import "./blocks/player";
-@import "./blocks/event";
-@import "./blocks/event-modal";
-@import "./blocks/buy-modal";
-@import "./blocks/footer";
-@import "./blocks/preloader";
+@import './blocks/header';
+@import './blocks/intro';
+@import './blocks/info';
+@import './blocks/about';
+@import './blocks/assortment';
+@import './blocks/recipe';
+@import './blocks/buy';
+@import './blocks/player';
+@import './blocks/event';
+@import './blocks/event-modal';
+@import './blocks/buy-modal';
+@import './blocks/footer';
+@import './blocks/preloader';
