--- a/scss/blocks/_about.scss
+++ b/scss/blocks/_about.scss
@@ -63,7 +63,8 @@
 @media (max-width: 1600px) {
   .about {
     &__bot {
-      object-fit: contain;object-position: center bottom;
+      object-fit: contain;
+      object-position: center bottom;
     }
   }
 }
@@ -73,6 +74,9 @@
     &-container {
       padding: 0 30px;
       max-width: 1400px;
+    }
+    &__items {
+      margin-top: 95px;
     }
   }
 }
@@ -105,6 +109,7 @@
       padding: 0 15px;
     }
     &__items {
+      margin-top: 50px;
       grid-template-columns: repeat(1, 1fr);
       justify-items: center;
       gap: 60px;
